tests/positive/Operators.juvix
module Operators;

syntax fixity add := binary {assoc := left};

syntax operator + add;
axiom + : Type → Type → Type;

plus : Type → Type → Type := (+);

plus2 : Type → Type → Type → Type
  | a b c := a + b + c;

plus3 : Type → Type → Type → Type → Type
  | a b c d := (+) (a + b) ((+) c d);
